Fix baseURL to eloymelo.com

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://eloymelo.github.io/"
+baseURL = "https://eloymelo.com/"
 title = "Eloy Melo"
 theme = "PaperMod"
 languageCode = "en"
