--- a/config.toml
+++ b/config.toml
@@ -20,6 +20,7 @@ enableRobotsTXT = true
   ShowCodeCopyButtons = true
   ShowDate = true
   DisableRelativeTime = true
+  DateFormat = "2 January 2006"
 
 [[menu.main]]
   name = "About"
